Ajustes sonar e implementação dos testes integrados
